Replace Thread.ofPlatform() with Thread constructor for JDK 17 compatibility
Thread.ofPlatform() is a JDK 19 API; using it on JDK 17 throws NoSuchMethodError
at runtime. Replace all five usages in DeadlockStressor, GcPressureStressor,
MonitorContentionStressor, ThreadLeakStressor, and VirtualThreadCarrierPinningStressor
with equivalent new Thread(runnable, name) + setDaemon(true) + start() calls that
work from JDK 8 onward. Fixes HIGH-27, HIGH-37, HIGH-38, HIGH-39, HIGH-40.